# ChordPy

./: .env  .gitignore  README.md  TODO.md  pyproject.toml
src/chordpy/: __init__.py  address.py  chord.py  cli.py  controller.py  gui.py  logger.py  main-gui.py  main.py  message.py  utils.py
src/chordpy/node/: interface.py  local.py  remote.py
src/chordpy/nodes/: local_node.py  node.py  remote_node.py
src/edadht/: __init__.py  cli.py  local_node.py  local_prototype.py  node_local.py
tests/: node_local_test.py
