[project]
name = "chordpy"
version = "0.2.0"
description = " Um sistema de armazenamento chave-valor distribuído baseado no protocolo Chord e implementado em Python."
authors = [
    {name = "msadley",email = "mendes.adley@gmail.com"},
    {name = "iuryhub", email = "iury32211@outlook.com"},
    {name = "joaoMedeir0s", email = "joao.pedro.araujo.de.medeiros@ccc.ufcg.edu.br"},
    {name = "zPaulof7", email = "jose.paulo.freitas.da.silva.farias@ccc.ufcg.edu.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
packages = [{include = "chordpy", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
